Thu Jul 02 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- FreeBSD implementation

Wed Jul 01 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Fixed some spelling mistakes :P

Tue Jun 26 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- MiniWebSvr now prints message on bad parameter
	- Short parameter support
	- Version is now specified in Makefile

Sat Jun 16 2007 Daniel Walker <djwalker at users.sourceforge.net>
	- Since THREAD_POOL and __WIN32__ are not compatible, Win32 builds
	  would fail when THREAD_POOL is defined. It now fails far more cleanly,
	  with advice not to enable THREAD_POOL for Windows.

Tue Jun 12 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Optional winmain entry point, still need to investigate if this is
	  what we want...

Mon May 28 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Renamed --stealth back to --noname
	- Fixed name/version reporting in generated errors
	- Fixed a bug in reporting the data range when whole file requested
	- Fixed capitalisation in reference to MiniWebSvr
	- Released version 0.0.8

Sun May 27 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Fixed default file bug 1723932. Hopefully for real this time.
	- Fixed compilation on Borland
	- It seems all files were CRLF's, but not all lines -> Fixed CRLF's
	  Whilst I was at it, Fixed indentation

Fri May 25 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Fixed default file bug 1723932.
	  http://sourceforge.net/tracker/index.php?func=detail&aid=1723932&group_id=187000&atid=919543
	- Made command-line options functional (nolog,default,nodirlist,noname)
	- changed --noname to --stealth
	- Fixed bug 1723929 (in directory listing on /, do not show '../')
	  http://sourceforge.net/tracker/index.php?func=detail&aid=1723929&group_id=187000&atid=919543

Thu May 24 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>